# dice_game_python

./: .gitignore  Makefile  README.md  main.py  pyproject.toml  requirements.txt  t.txt
.github/workflows/: python-publish.yml
src/baboo_game/: __init__.py  main.py
src/baboo_game/game/: baboo_game.py  rander_game.py  render_game.py
src/baboo_game/game/config/: text_constant.py
src/config/: color_config.py  game_config.py  text_constant.py
src/game/: baboo_game.py  rander_game.py
